# x64dbg-mcp

./: .gitignore  CMakeLists.txt  README.md  toolchain-x64.cmake  toolchain-x86.cmake  x64bridge.def  x64dbg-mcp.json  x64dbg.def
build-x64/: CMakeCache.txt  Makefile  cmake_install.cmake
build32/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: toolchain-x64.cmake  toolchain-x86.cmake  x32bridge.def  x32dbg.def  x32dbg_plugin.def  x64dbg.def  x64dbg_plugin.def
include/: _plugin_types.h  _plugins.h  bridgemain.h
include/jansson/: jansson_x64dbg.h
src/: config.cpp  config.h  main.cpp  mcp_server.cpp  mcp_server.h  tool_dispatcher.cpp  tool_dispatcher.h
src/tools/: analysis.cpp  breakpoints.cpp  common.h  control.cpp  core.cpp  memory.cpp  process.cpp  register.cpp  threads.cpp
